--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,9 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
 
-before_install:
-  - pip install --user ninja
-
 script:
   - mkdir build
   - cd build
-  - cmake -G "Ninja" ..
-  - ninja
+  - cmake ..
+  - cmake --build .
   - ctest
