--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 compiler:
-  - clang
-  - gcc
+  - clang-10
+  - g++-9
 
 addons:
   apt:
@@ -13,4 +13,4 @@ script:
   - cd build
   - cmake ..
   - cmake --build .
-  - ctest
+  - ctest --verbose
