--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 set(this model_test)
 
 set(Sources
-	test_data_type.cpp)
+	test_data_type.cpp
+	test_collection_type.cpp)
 
 add_executable(${this}
 	${Sources})
