--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
   - mkdir build
   - cd build
   - cmake .. -D ENABLE_COVERAGE:BOOL=TRUE
-  - cmake --build . -- -j2
-  - ctest -j2 --verbose
+  - cmake --build .
+  - ctest --verbose
   - bash <(curl -s https://codecov.io/bash)
