--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
 script:
   - mkdir build
   - cd build
-  - cmake -D ENABLE_COVERAGE:BOOL=TRUE ..
-  - cmake --build .
+  - cmake ..
+  - cmake --build . -- VERBOSE=1 
   - ctest --verbose
   - bash <(curl -s https://codecov.io/bash)
