--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 dist: bionic
 
 language: cpp
+
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -q update
+  - sudo apt-get -y install gcc-9.2
+
 compiler:
   - g++-9.2.0
 
 addons:
   apt:
+    update: true
     sources:
       - ubuntu-toolchain-r-test
 
