--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: cpp
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get -q update
-  - sudo apt-get -y install gcc-9.2
+  - sudo apt-get install g++
 
 compiler:
   - g++-9.2.0
