--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ dist: bionic
 language: cpp
 
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y install ppa:ubuntu-toolchain-r/test
   - sudo apt-get -q update
-  - sudo apt-get install g++
+  - sudo apt-get -y install build-essential
+  - sudo apt-get -y install llvm
+  - sudo apt-get -y install clang-9.0
 
 compiler:
-  - g++-9.2.0
+  - gcc
+  - clang
 
 addons:
   apt:
@@ -20,6 +23,6 @@ script:
   - mkdir build
   - cd build
   - cmake ..
-  - cmake --build . -- VERBOSE=1 
+  - cmake --build .
   - ctest --verbose
   - bash <(curl -s https://codecov.io/bash)
