configuring travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
   - mkdir build
   - cd build
   - cmake ..
-  - cmake --build .
+  - cmake --build . -- verbose
   - ctest --verbose
   - bash <(curl -s https://codecov.io/bash)
