--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_install:
 matrix:
   include:
     - os: linux
-      language: python
-      python: "3.8"
+      language: cpp
       addons:
         apt:
           sources:
