--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,15 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-9
-            - cmake-3.18
       env:
          - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - cmake-3.11
 
 before_install:
     - eval "${MATRIX_EVAL}"
